--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # Core
 openai==1.14.2
-azure-search-documents==11.5.0
+azure-search-documents==11.5.2
 azure-core==1.33.0
 PyPDF2==3.0.1
 streamlit==1.25.0
-requests==2.32.3
+colorama==0.4.6
 # Optionnal 
